Prevents scrollbar..

--- a/app/static/common/markdown.css
+++ b/app/static/common/markdown.css
@@ -285,7 +285,7 @@ changes from the original, just a note that this will not match 1-1)
 }
 
 .markdown-body video {
-	max-width: 100%;
+	max-width: 95%;
 }
 
 .markdown-body img[align=right] {
